@@ -343,6 +343,7 @@ version 5.0-alpha6 (2015-10-06)
 
 version 5.0-alpha7 (2015-10-20)
     * Factors out JWTAssertionClaimsSet into claims package.
+    * Factors out JWTAssertionClaimsSetVerifier into claims package.
     * Adds JWTBearerGrant checks to reject unsecured JWT assertions or
       JWT assertion in a state that cannot be serialised.
     * Moves token_endpoint_auth_signing_alg field from OIDCClientMetadata to
